Bugfix #5012 - New UI: The image file name overlapped with the Browse button in the Insert Image

--- a/Website/Composite/styles/default/fields/fields-base.less
+++ b/Website/Composite/styles/default/fields/fields-base.less
@@ -271,16 +271,9 @@ ui|editortextbox {
     }
 
     &.disabled, &.readonly {
-        ui|box {
+
+        ui|box, ui|box input, ui|toolbarbutton {
             background-color: @field-readonly-bg-color;
-
-            input {
-                background-color: @field-readonly-bg-color;
-            }
-        }
-
-        ui|toolbarbutton {
-            background: transparent;
         }
     }
 
